syntax = "proto3";

package dstore;

message PushArg {
    bytes key = 1;
    bytes value = 2;
}

message Null {}

message Byte {
    bytes body = 1;
}

message Size {
    int32 size = 1;
}

service Dstore {
    rpc Push(PushArg) returns (Null);
    rpc PushFile(stream Byte) returns (Null);
    rpc Pull(Byte) returns (Byte);
    rpc PullFile(Byte) returns (stream Byte);
    rpc Contains(Byte) returns (Size);
    rpc Remove(Byte) returns (Null);
    rpc Update(Byte) returns (Byte);

    rpc Join(Byte) returns (Null);
}